# django-gsheets-import

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
docs/: conf.py  index.rst
docs/user_manual/: demo_app.rst  getting_started.rst  google_cloud_project.rst
gsheets_import/: admin.py  forms.py  google_sheet_format.py
gsheets_import/static/gsheets_import/css/: file_and_google.css  sticky.css
gsheets_import/static/gsheets_import/js/: gcp_identifiers.js  import_gs.js  sticky.js  sticky_helpers.js
gsheets_import/templates/admin/gsheets_import/: import.html
gsheets_import/templates/forms/widgets/: file_and_google.html
tests/testapp/: manage.py  requirements.txt  settings.py  urls.py
tests/testapp/literature/: admin.py  apps.py  models.py  resources.py
tests/testapp/literature/fixtures/: authors.json  works.json
tests/testapp/testdata/: GSheetsImportDemo-Authors.csv  GSheetsImportDemo-Works.csv
