[metadata]
name = django-gsheets-import
version = 0.0.1
author = Alexander Helmboldt
author_email = alexander.helmboldt@embl.de
description = A Django app to import tabular data from Google Sheets
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
url = https://github.com/kenkuhhaut/django-gsheets-import
project_urls =
    Bug Tracker = https://github.com/kenkuhhaut/django-gsheets-import/issues
    Documentation = https://django-gsheets-import.readthedocs.io/en/latest/
    Source Code = https://github.com/kenkuhhaut/django-gsheets-import
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Software Development
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
keywords = django, django-admin, google sheets, google drive, data import



[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    django-import-export >= 2.5.0
    google-api-python-client >= 2.1.0
    google-auth-httplib2 >= 0.1.0
    google-auth-oauthlib >= 0.4.4
